--- a/index.html
+++ b/index.html
@@ -862,12 +862,15 @@ p{
 }
 
 /* Footer normal, sin position */
-.cv-footer {
-  padding: 1rem 0;
+.cv-footer{
+  margin-top: 140px;
+  padding: 40px 0 20px;
   text-align: center;
-  font-size: 0.8rem;
-  color: #777;
+  font-size: 11px;
+  letter-spacing: .08em;
+  color: #9a9a9a;
 }
+
 
 
 .cv-marker{
@@ -963,14 +966,7 @@ p{
   }
 }
 
-#cv #global-footer{
-  position: static;
-  background: none;
-  padding: 60px 0 40px;
-  opacity: 1;
-  transform: none;
-  animation: none;
-}
+
 
   
   
@@ -1123,9 +1119,10 @@ p{
     </div>
   </div>
 
-  <footer id="global-footer">
-    © 2026 · Luis Blasco-Ibáñez Berbel · Ingeniería en diseño industrial
-  </footer>
+ <div class="cv-footer">
+  © 2026 · Luis Blasco-Ibáñez Berbel · Ingeniería en diseño industrial
+</div>
+
 </section>
 
 
