--- a/index.html
+++ b/index.html
@@ -803,6 +803,69 @@ footer{
   color: var(--muted);
 }
 
+
+  /* ===== CV SCROLL SNAP ===== */
+
+.cv-snap{
+  height: 100vh;
+  overflow-y: auto;
+  scroll-snap-type: y mandatory;
+  padding-bottom: 0;
+}
+
+.cv-snap-list{
+  display: flex;
+  flex-direction: column;
+}
+
+.cv-snap-item{
+  height: 100vh;
+  scroll-snap-align: start;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  max-width: 620px;
+  padding-bottom: 60px;
+
+  opacity: .2;
+  transform: translateY(40px);
+  transition: .8s cubic-bezier(.22,.61,.36,1);
+}
+
+.cv-snap-item.active{
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.cv-index{
+  font-size: 11px;
+  letter-spacing: .3em;
+  color: var(--muted);
+  margin-bottom: 10px;
+}
+
+.cv-snap-item h3{
+  font-size: 26px;
+  margin-bottom: 14px;
+}
+
+.cv-year{
+  margin-top: 18px;
+  font-size: 11px;
+  letter-spacing: .22em;
+  text-transform: uppercase;
+  color: var(--muted);
+}
+
+  .cv-snap{
+  scrollbar-width: none;
+}
+.cv-snap::-webkit-scrollbar{
+  display: none;
+}
+
   
 </style>
 </head>
@@ -900,13 +963,13 @@ footer{
 </section>
 
 <section id="cv" class="section">
-  <div class="content cv-scroll">
+  <div class="content cv-snap">
 
     <h2 class="fade-up">Currículum Vitae</h2>
 
-    <div class="cv-list">
+    <div class="cv-snap-list">
 
-      <article class="cv-item" data-bg="bg-electricidad.jpg">
+      <article class="cv-snap-item" data-bg="bg-electricidad.jpg">
         <span class="cv-index">01</span>
         <h3>Formación técnica</h3>
         <p>
@@ -916,7 +979,7 @@ footer{
         <span class="cv-year">2018 · 2020</span>
       </article>
 
-      <article class="cv-item" data-bg="bg-upv.jpg">
+      <article class="cv-snap-item" data-bg="bg-upv.jpg">
         <span class="cv-index">02</span>
         <h3>UPV · Diseño Industrial</h3>
         <p>
@@ -926,7 +989,7 @@ footer{
         <span class="cv-year">2022 · 2026</span>
       </article>
 
-      <article class="cv-item" data-bg="bg-sixay.jpg">
+      <article class="cv-snap-item" data-bg="bg-sixay.jpg">
         <span class="cv-index">03</span>
         <h3>Sixay · Prácticas</h3>
         <p>
@@ -936,7 +999,7 @@ footer{
         <span class="cv-year">2025</span>
       </article>
 
-      <article class="cv-item" data-bg="bg-now.jpg">
+      <article class="cv-snap-item" data-bg="bg-now.jpg">
         <span class="cv-index">04</span>
         <h3>Perfil actual</h3>
         <p>
@@ -1213,6 +1276,32 @@ const observer = new IntersectionObserver(entries => {
 
 cvItems.forEach(item => observer.observe(item));
 
+const snapItems = document.querySelectorAll('.cv-snap-item');
+const bgLayer = document.querySelector('.bg-layer');
+
+const snapObserver = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if(entry.isIntersecting){
+      snapItems.forEach(i => i.classList.remove('active'));
+      entry.target.classList.add('active');
+
+      const bg = entry.target.dataset.bg;
+      if(bg){
+        bgLayer.style.opacity = 0;
+        setTimeout(() => {
+          bgLayer.style.background =
+            `linear-gradient(rgba(11,11,13,.75), rgba(11,11,13,.7)),
+             url('${bg}') center / cover no-repeat`;
+          bgLayer.style.opacity = 1;
+        }, 300);
+      }
+    }
+  });
+},{
+  threshold: 0.65
+});
+
+snapItems.forEach(item => snapObserver.observe(item));
 
   
 </script>
