--- a/index.html
+++ b/index.html
@@ -807,11 +807,20 @@ footer{
   /* ===== CV SCROLL SNAP ===== */
 
 .cv-snap{
-  height: 100vh;
+  height: calc(100vh - 160px);
   overflow-y: auto;
   scroll-snap-type: y mandatory;
-  padding-bottom: 0;
 }
+
+  .cv-snap{
+  position: relative;
+  z-index: 1;
+}
+
+header{
+  z-index: 1000;
+}
+
 
 .cv-snap-list{
   display: flex;
@@ -1249,7 +1258,6 @@ function changeSection(id, link) {
 
 let cvIndex = 0;
 
-const cvItems = document.querySelectorAll('.cv-item');
 const bgLayer = document.querySelector('.bg-layer');
 
 const observer = new IntersectionObserver(entries => {
@@ -1277,7 +1285,6 @@ const observer = new IntersectionObserver(entries => {
 cvItems.forEach(item => observer.observe(item));
 
 const snapItems = document.querySelectorAll('.cv-snap-item');
-const bgLayer = document.querySelector('.bg-layer');
 
 const snapObserver = new IntersectionObserver(entries => {
   entries.forEach(entry => {
