--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@ header{
     <div class="cv-group">
 
       <div class="cv-group-header">
-        <h3 class="cv-group-title">Formación</h3>
+        <h3 class="cv-group-title">Formación académica</h3>
         <span class="cv-divider"></span>
       </div>
 
