--- a/index.html
+++ b/index.html
@@ -1061,6 +1061,62 @@ header{
   background: rgba(255,255,255,.35);
 }
 
+  /* ===== CV ENTRANCE ANIMATION ===== */
+
+.cv-editorial{
+  animation: cvFadeIn 0.9s cubic-bezier(.22,.61,.36,1) forwards;
+}
+
+@keyframes cvFadeIn{
+  from{
+    opacity: 0;
+    transform: translateY(16px);
+  }
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+  .cv-group{
+  opacity: 0;
+  transform: translateY(24px);
+  animation: cvGroupIn 0.9s cubic-bezier(.22,.61,.36,1) forwards;
+}
+
+.cv-group:nth-of-type(1){ animation-delay: .25s; }
+.cv-group:nth-of-type(2){ animation-delay: .55s; }
+
+@keyframes cvGroupIn{
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+  .cv-entry{
+  opacity: 0;
+  transform: translateY(20px);
+  animation: cvEntryIn 0.8s cubic-bezier(.22,.61,.36,1) forwards;
+}
+
+/* FORMACION */
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(1){ animation-delay: .45s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(2){ animation-delay: .60s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(3){ animation-delay: .75s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(4){ animation-delay: .90s; }
+
+/* EXPERIENCIA */
+.cv-group:nth-of-type(2) .cv-entry:nth-of-type(1){ animation-delay: .75s; }
+.cv-group:nth-of-type(2) .cv-entry:nth-of-type(2){ animation-delay: .90s; }
+
+@keyframes cvEntryIn{
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 
 </style>
 </head>
